@@ -1,0 +1,19 @@
+#!/bin/bash
+# setup script for the alice-hlt package
+# the LD_LIBRARY_PATH variable is set according to the package configuration
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+bindir=@bindir@
+libdir=@libdir@
+
+export ROOTSYS=@ROOTSYS@ 
+ADD_LIBDIR="$ADD_LIBDIR @ROOTLIBDIR@"
+ADD_LIBDIR="$ADD_LIBDIR @ALIROOTLIBDIR@"
+ADD_LIBDIR="$ADD_LIBDIR ${libdir}"
+ADD_LIBDIR="$ADD_LIBDIR @HOMER_LIBDIR@"
+for i in $ADD_LIBDIR ; do export LD_LIBRARY_PATH="$i:$LD_LIBRARY_PATH"; done
+
+ADD_BINDIR="$ADD_BINDIR $bindir"
+ADD_BINDIR="$ADD_BINDIR @HOMER_BINDIR@"
+for i in $ADD_BINDIR ; do export PATH="${i}:$PATH"; done
